Fixed shaking not working on Firefox (moz)

--- a/src/less/shake.less
+++ b/src/less/shake.less
@@ -1,6 +1,6 @@
 @toasty-shake-speed: 0.5s;
 
-@-webkit-keyframes toasty-shake {
+@keyframes toasty-shake {
 	0% { transform: translate(2px, 1px) rotate(0deg); }
 	10% { transform: translate(-1px, -2px) rotate(-1deg); }
 	20% { transform: translate(-3px, 0px) rotate(1deg); }
